--- a/source/Tutorial 4_Stereo-seq (mouse olfactory bulb).ipynb
+++ b/source/Tutorial 4_Stereo-seq (mouse olfactory bulb).ipynb
@@ -15,7 +15,7 @@
    "source": [
     "This tutorial demonstrates how to identify spatial domains on the Stereo-seq platform.\n",
     "\n",
-    "In this tutorial, we foucs on the mouse olfactory bulb Stereo-seq data (https://github.com/JinmiaoChenLab/SEDR_analysiss). Before running the model, please download the input data via https://drive.google.com/drive/folders/1pV6u6U3JD8aTnBIGHEZdctZ0hZfWcBY1."
+    "In this tutorial, we foucs on the mouse olfactory bulb Stereo-seq data (https://github.com/JinmiaoChenLab/SEDR_analysiss). Before running the model, please download the input data via https://zenodo.org/record/8185216/files/Mouse_olfactory_bulb.rar?download=1."
    ]
   },
   {
